--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ body {
 }
 
 .container {
-  margin: 0 50px;
-  width: auto;
+  margin: 0 auto;
+  width: 550px;
 }
 
 #game {
@@ -28,3 +28,76 @@ canvas {
 td {
   padding: 0 10px 5px 0;
 }
+
+@keyframes flicker {
+    0% {
+        opacity: 0.90403; }
+    5% {
+        opacity: 0.44126; }
+    10% {
+        opacity: 0.02259; }
+    15% {
+        opacity: 0.76784; }
+    20% {
+        opacity: 0.48178; }
+    25% {
+        opacity: 0.51975; }
+    30% {
+        opacity: 0.4369; }
+    35% {
+        opacity: 0.6326; }
+    40% {
+        opacity: 0.57552; }
+    45% {
+        opacity: 0.27119; }
+    50% {
+        opacity: 0.4011; }
+    55% {
+        opacity: 0.85061; }
+    60% {
+        opacity: 0.60204; }
+    65% {
+        opacity: 0.88038; }
+    70% {
+        opacity: 0.21843; }
+    75% {
+        opacity: 0.3059; }
+    80% {
+        opacity: 0.96234; }
+    85% {
+        opacity: 0.54646; }
+    90% {
+        opacity: 0.39677; }
+    95% {
+        opacity: 0.38309; }
+    100% {
+        opacity: 0.87896; } }
+
+body {
+    background: #000;
+    text-transform: uppercase; }
+body::after {
+    content: " ";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(100, 10, 41, 0.1);
+    opacity: 0;
+    z-index: 2;
+    pointer-events: none;
+    animation: flicker 0.15s infinite; }
+body::before {
+    content: " ";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(100, 10, 41, 0) 50%, rgba(54, 5, 22, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+    z-index: 2;
+    background-size: 100% 2px, 3px 100%;
+    pointer-events: none; }
