--- a/index.css
+++ b/index.css
@@ -1,103 +1,158 @@
+@keyframes flicker {
+	0% {
+		opacity: 0.90403;
+	}
+	5% {
+		opacity: 0.44126;
+	}
+	10% {
+		opacity: 0.02259;
+	}
+	15% {
+		opacity: 0.76784;
+	}
+	20% {
+		opacity: 0.48178;
+	}
+	25% {
+		opacity: 0.51975;
+	}
+	30% {
+		opacity: 0.4369;
+	}
+	35% {
+		opacity: 0.6326;
+	}
+	40% {
+		opacity: 0.57552;
+	}
+	45% {
+		opacity: 0.27119;
+	}
+	50% {
+		opacity: 0.4011;
+	}
+	55% {
+		opacity: 0.85061;
+	}
+	60% {
+		opacity: 0.60204;
+	}
+	65% {
+		opacity: 0.88038;
+	}
+	70% {
+		opacity: 0.21843;
+	}
+	75% {
+		opacity: 0.3059;
+	}
+	80% {
+		opacity: 0.96234;
+	}
+	85% {
+		opacity: 0.54646;
+	}
+	90% {
+		opacity: 0.39677;
+	}
+	95% {
+		opacity: 0.38309;
+	}
+	100% {
+		opacity: 0.87896;
+	}
+}
+
 body {
-  background: #000;
-  color: rgb(0,255,0);
-  font-family: 'Press Start 2P', serif;
-  font-size: 75%;
-  margin: 0;
-  padding: 0;
+	background: #000;
+	font-family: 'Press Start 2P', serif;
+	font-size: 75%;
+	line-height: 1.5;
+	margin: 0;
+	padding: 0;
+	text-transform: uppercase;
+}
+
+body::after {
+	animation: flicker 0.15s infinite;
+	background: rgba(100, 10, 41, 0.1);
+	content: " ";
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	opacity: 0;
+	z-index: 2;
+	pointer-events: none;
+}
+
+body::before {
+	content: " ";
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background: linear-gradient(rgba(100, 10, 41, 0) 50%, rgba(54, 5, 22, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+	z-index: 2;
+	background-size: 100% 2px, 3px 100%;
+	pointer-events: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin-top: 25px;
+	margin-bottom: 5px;
+}
+
+p {
+	margin-top: 4px;
 }
 
 .container {
-  margin: 0 auto;
-  width: 550px;
+	margin: 100px auto 0;
+	border: 3px solid rgb(0, 255, 0);
+	vertical-align: middle;
+	width: 550px;
 }
 
-#game {
-  margin: 0 auto;
+.header {
+	background: rgb(0, 255, 0);
+	padding: 10px 5px 10px;
+	color: #000;
+	margin: 0;
 }
 
-#info {
-  width: 100%;
+.body {
+	padding: 5px 0 0 5px;
+	color: rgb(0, 255, 0);
 }
 
-canvas {
-  border: 1px solid rgb(0,255,0);
-  tabindex = "1";
+.play {
+	text-align: center;
+	padding: 25px 0 25px;
 }
 
-td {
-  padding: 0 10px 5px 0;
+.button {
+	background: rgb(0, 255, 0);
+	border-radius: 5px;
+	color: rgb(0, 0, 0);
+	padding: 10px 15px;
+	transition: 500ms;
 }
 
-@keyframes flicker {
-    0% {
-        opacity: 0.90403; }
-    5% {
-        opacity: 0.44126; }
-    10% {
-        opacity: 0.02259; }
-    15% {
-        opacity: 0.76784; }
-    20% {
-        opacity: 0.48178; }
-    25% {
-        opacity: 0.51975; }
-    30% {
-        opacity: 0.4369; }
-    35% {
-        opacity: 0.6326; }
-    40% {
-        opacity: 0.57552; }
-    45% {
-        opacity: 0.27119; }
-    50% {
-        opacity: 0.4011; }
-    55% {
-        opacity: 0.85061; }
-    60% {
-        opacity: 0.60204; }
-    65% {
-        opacity: 0.88038; }
-    70% {
-        opacity: 0.21843; }
-    75% {
-        opacity: 0.3059; }
-    80% {
-        opacity: 0.96234; }
-    85% {
-        opacity: 0.54646; }
-    90% {
-        opacity: 0.39677; }
-    95% {
-        opacity: 0.38309; }
-    100% {
-        opacity: 0.87896; } }
-
-body {
-    background: #000;
-    text-transform: uppercase; }
-body::after {
-    content: " ";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(100, 10, 41, 0.1);
-    opacity: 0;
-    z-index: 2;
-    pointer-events: none;
-    animation: flicker 0.15s infinite; }
-body::before {
-    content: " ";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: linear-gradient(rgba(100, 10, 41, 0) 50%, rgba(54, 5, 22, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-    z-index: 2;
-    background-size: 100% 2px, 3px 100%;
-    pointer-events: none; }
+.button:hover {
+	transition: 500ms;
+	background: rgb(255, 0, 0);
+	border-radius: 5px;
+	color: rgb(0, 0, 0);
+	padding: 10px 15px;
+}
