--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,159 +1,176 @@
 @keyframes flicker {
-	0% {
-		opacity: 0.90403;
-	}
-	5% {
-		opacity: 0.44126;
-	}
-	10% {
-		opacity: 0.02259;
-	}
-	15% {
-		opacity: 0.76784;
-	}
-	20% {
-		opacity: 0.48178;
-	}
-	25% {
-		opacity: 0.51975;
-	}
-	30% {
-		opacity: 0.4369;
-	}
-	35% {
-		opacity: 0.6326;
-	}
-	40% {
-		opacity: 0.57552;
-	}
-	45% {
-		opacity: 0.27119;
-	}
-	50% {
-		opacity: 0.4011;
-	}
-	55% {
-		opacity: 0.85061;
-	}
-	60% {
-		opacity: 0.60204;
-	}
-	65% {
-		opacity: 0.88038;
-	}
-	70% {
-		opacity: 0.21843;
-	}
-	75% {
-		opacity: 0.3059;
-	}
-	80% {
-		opacity: 0.96234;
-	}
-	85% {
-		opacity: 0.54646;
-	}
-	90% {
-		opacity: 0.39677;
-	}
-	95% {
-		opacity: 0.38309;
-	}
-	100% {
-		opacity: 0.87896;
-	}
+    0% {
+        opacity: 0.90403;
+    }
+    5% {
+        opacity: 0.44126;
+    }
+    10% {
+        opacity: 0.02259;
+    }
+    15% {
+        opacity: 0.76784;
+    }
+    20% {
+        opacity: 0.48178;
+    }
+    25% {
+        opacity: 0.51975;
+    }
+    30% {
+        opacity: 0.4369;
+    }
+    35% {
+        opacity: 0.6326;
+    }
+    40% {
+        opacity: 0.57552;
+    }
+    45% {
+        opacity: 0.27119;
+    }
+    50% {
+        opacity: 0.4011;
+    }
+    55% {
+        opacity: 0.85061;
+    }
+    60% {
+        opacity: 0.60204;
+    }
+    65% {
+        opacity: 0.88038;
+    }
+    70% {
+        opacity: 0.21843;
+    }
+    75% {
+        opacity: 0.3059;
+    }
+    80% {
+        opacity: 0.96234;
+    }
+    85% {
+        opacity: 0.54646;
+    }
+    90% {
+        opacity: 0.39677;
+    }
+    95% {
+        opacity: 0.38309;
+    }
+    100% {
+        opacity: 0.87896;
+    }
 }
 
 body {
-	background: #000;
-	color: rgb(0, 255, 0);
-	font-family: 'Press Start 2P', serif;
-	font-size: 75%;
-	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
+    background: #000;
+    color: rgb(0, 255, 0);
+    font-family: 'Press Start 2P', serif;
+    font-size: 75%;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
 }
 
 body::after {
-	content: " ";
-	display: block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: rgba(100, 10, 41, 0.1);
-	opacity: 0;
-	z-index: 2;
-	pointer-events: none;
-	animation: flicker 0.15s infinite;
+    content: " ";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(100, 10, 41, 0.1);
+    opacity: 0;
+    z-index: 2;
+    pointer-events: none;
+    animation: flicker 0.15s infinite;
 }
 
 body::before {
-	content: " ";
-	display: block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: linear-gradient(rgba(100, 10, 41, 0) 50%, rgba(54, 5, 22, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-	z-index: 2;
-	background-size: 100% 2px, 3px 100%;
-	pointer-events: none;
+    content: " ";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(100, 10, 41, 0) 50%, rgba(54, 5, 22, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+    z-index: 2;
+    background-size: 100% 2px, 3px 100%;
+    pointer-events: none;
 }
 
 h3 {
-	background: rgb(0, 255, 0);
-	color: #000000;
-	margin: 0;
-	padding: 10px 5px;
+    background: rgb(0, 255, 0);
+    color: #000000;
+    margin: 0;
+    padding: 10px 5px;
 }
 
 .container {
-	border: 3px solid rgb(0, 255, 0);
-	margin: 6vh auto;
-	width: 500px;
+    border: 3px solid rgb(0, 255, 0);
+    margin: 6vh auto;
+    width: 500px;
 }
 
 #game {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 #scores {
-	background: rgb(0, 255, 0);
-	color: #000000;
-	display: inline-flex;
-	width: 501px;
+    background: rgb(0, 255, 0);
+    color: #000000;
+    display: inline-flex;
+    width: 501px;
 }
 
 #scores p {
     margin: 8px 5px 5px 5px;
-	padding: 5px;
+    padding: 5px;
 }
 
 canvas {
-	border-bottom: 1px solid rgb(0, 255, 0);
-	tab-index: 1;
+    border-bottom: 1px solid rgb(0, 255, 0);
+    tab-index: 1;
+}
+
+.controlls {
+    display: inline-flex; 
+    text-align: center; 
+    width: 100%;
+    position: fixed;
+    bottom: 0; 
+    left: 10px;
+}
+
+.controller {
+    font-size: 14px;
+}
+
+.controller:not(:first-child) {
+    margin-left: 15px;
 }
 
 .userInput {
-	line-height: 1.5;
-	margin: 20vh auto;
+    line-height: 1.5;
+    margin: 20vh auto;
 }
 
 .inner-box {
-	padding: 5px 10px 10px 10px;
-	background: #000000;
+    padding: 5px 10px 10px 10px;
+    background: #000000;
 }
 
 .hiddenDefault {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.80);
-	width: 100%;
-	height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.80);
+    width: 100%;
+    height: 100%;
 }
 
 .inline-block {
@@ -161,7 +178,7 @@ canvas {
     display: inline-flex;
 }
 
-#enter {
+.enter {
     margin: 0;
     position: inherit;
     margin-left: 160px;
