--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -156,7 +156,7 @@ canvas {
     left: 0;
     position: fixed;
     top: 0;
-    visibility: visible;
+    visibility: hidden;
     width: 100%;
 }
 
